--- a/chrome/psdle/manifest.json
+++ b/chrome/psdle/manifest.json
@@ -2,6 +2,7 @@
 	"manifest_version": 2,
 	
 	"name": "__MSG_appName__",
+    "short_name": "__MSG_appName__",
 	"description": "__MSG_appDesc__",
 	"default_locale": "en",
 	
