Chrome extension now skips startup phase.
Technically all versions can now if psdleSkip is true.

--- a/chrome/psdle/manifest.json
+++ b/chrome/psdle/manifest.json
@@ -18,7 +18,7 @@
 	"background": {
 		"scripts": ["js/background.js"]
 	},
-	"web_accessible_resources": [ "js/psdle.js" ],
+	"web_accessible_resources": [ "js/psdleChromium.js", "js/psdle.js" ],
 	"icons": {
 		"16": "icons/icon32.png",
 		"48": "icons/icon64.png",
