--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Chrome Extension
-chrome/psdle/js/psdle.js
+_src/chrome/psdle/js/psdle.js
 *.pem
 *.crx
-!chrome/psdle.crx
+!_src/chrome/psdle.crx
 
 # Firefox Add-on
 firefox/*
