--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-uglify": "^3.1.0",
     "grunt-includes": "^1.0.0",
-    "grunt-minjson": "^0.4.0"
+    "grunt-minjson": "^0.4.0",
+    "grunt-run-executables": "0.0.2"
   },
   "dependencies": {}
 }
