--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "psdle",
-  "version": "1.0.0",
+  "version": "2.105",
   "description": "Improving everyone's favorite online download list, one loop at a time. ",
-  "main": "src/psdle.js",
+  "main": "_src/psdle.base.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/RePod/psdle.git"
   },
   "author": "RePod",
-  "license": "(c) RePod, https://github.com/RePod/psdle/blob/master/LICENSE",
+  "license": "(c) RePod, MIT https://github.com/RePod/psdle/blob/master/LICENSE",
   "bugs": {
     "url": "https://github.com/RePod/psdle/issues"
   },
@@ -24,7 +24,8 @@
     "grunt-contrib-uglify": "^3.1.0",
     "grunt-includes": "^1.0.0",
     "grunt-minjson": "^0.4.0",
-    "grunt-run-executables": "0.0.2"
+    "grunt-run-executables": "0.0.2",
+    "grunt-string-replace": "^1.3.1"
   },
   "dependencies": {}
 }
