--- a/_src/chrome/psdle/manifest.json
+++ b/_src/chrome/psdle/manifest.json
@@ -1,27 +1,28 @@
 {
-	"manifest_version": 2,
+    "manifest_version": 2,
 
-	"name": "__MSG_appName__",
+    "name": "__MSG_appName__",
     "short_name": "__MSG_appName__",
-	"description": "__MSG_appDesc__",
-	"default_locale": "en",
+    "description": "__MSG_appDesc__",
+    "default_locale": "en",
+    "homepage_url": "https://repod.github.io/psdle",
 
-	"version": "2.107",
+    "version": "2.107",
 
-	"page_action": {
-		"default_icon": "icons/icon32.png",
-		"default_title": "__MSG_pageActionRun__"
-	},
-	"permissions": [
-		"tabs", "activeTab", "https://store.playstation.com/*"
-	],
-	"background": {
-		"scripts": ["js/background.js"]
-	},
-	"web_accessible_resources": [ "js/psdleChromium.js", "js/psdle.js" ],
-	"icons": {
-		"16": "icons/icon32.png",
-		"48": "icons/icon64.png",
-		"128": "icons/icon128.png"
-	}
+    "page_action": {
+        "default_icon": "icons/icon32.png",
+        "default_title": "__MSG_pageActionRun__"
+    },
+    "permissions": [
+        "tabs", "activeTab", "https://store.playstation.com/*"
+    ],
+    "background": {
+        "scripts": ["js/background.js"]
+    },
+    "web_accessible_resources": [ "js/psdleChromium.js", "js/psdle.js" ],
+    "icons": {
+        "16": "icons/icon32.png",
+        "48": "icons/icon64.png",
+        "128": "icons/icon128.png"
+    }
 }
