--- a/_src/chrome/psdle/manifest.json
+++ b/_src/chrome/psdle/manifest.json
@@ -1,13 +1,13 @@
 {
     "manifest_version": 2,
 
-    "name": "__MSG_appName__",
+    "name": "PSDLE",
     "short_name": "__MSG_appName__",
     "description": "__MSG_appDesc__",
     "default_locale": "en",
     "homepage_url": "https://repod.github.io/psdle",
 
-    "version": "2.107",
+    "version": "2.1.80",
 
     "page_action": {
         "default_icon": "icons/icon32.png",
