--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "psdle",
-  "version": "2.107",
+  "version": "2.1.80",
   "description": "Improving everyone's favorite online download list, one loop at a time. ",
   "main": "_src/psdle.base.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RePod/psdle.git"
@@ -22,10 +20,13 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-uglify": "^3.1.0",
+    "grunt-exec": "^3.0.0",
     "grunt-includes": "^1.0.0",
     "grunt-minjson": "^0.4.0",
     "grunt-run-executables": "0.0.2",
-    "grunt-string-replace": "^1.3.1"
+    "grunt-string-replace": "^1.3.1",
+    "grunt-webext-builder": "^0.1.0",
+    "install": "^0.10.1"
   },
   "dependencies": {}
 }
