--- a/_src/chrome/psdle/manifest.json
+++ b/_src/chrome/psdle/manifest.json
@@ -24,5 +24,10 @@
         "16": "icons/icon32.png",
         "48": "icons/icon64.png",
         "128": "icons/icon128.png"
+    },
+    "applications": {
+        "gecko": {
+            "update_url": "https://repod.github.io/psdle/xpi.json"
+        }
     }
 }
