Improve Chrome deployment
My previous symlink to the min file failed so let's just manually copy it.

In turn also fixed Firefox's fallback PSDLE.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 _src/chrome/psdle/js/psdle.js
 *.pem
 *.crx
-!_src/chrome/psdle.crx
 # Firefox Add-on
-*-raw.xpi
+*.xpi
+!psdle.xpi
 
 # Etc.
 Thumbs.db
