--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "homepage": "https://github.com/RePod/psdle#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-concat-json": "0.0.10",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-uglify": "^3.1.0",
     "grunt-exec": "^3.0.0",
     "grunt-includes": "^1.0.0",
-    "grunt-minjson": "^0.4.0",
     "grunt-run-executables": "0.0.2",
     "grunt-string-replace": "^1.3.1",
     "grunt-webext-builder": "^0.1.0",
