PSDLE - Update Chrome extension.
If ran from the Store will redirect then launch automatically.
Otherwise launch from the Library.

--- a/_src/chrome/psdle/manifest.json
+++ b/_src/chrome/psdle/manifest.json
@@ -14,7 +14,7 @@
         "default_title": "__MSG_pageActionRun__"
     },
     "permissions": [
-        "tabs", "activeTab", "https://store.playstation.com/*"
+        "tabs", "activeTab", "https://store.playstation.com/*", "https://library.playstation.com/*"
     ],
     "background": {
         "scripts": ["js/background.js"]
