--- a/_src/chrome/psdle/manifest.json
+++ b/_src/chrome/psdle/manifest.json
@@ -19,6 +19,13 @@
     "background": {
         "scripts": ["js/background.js"]
     },
+    "content_scripts": [
+        {
+          "matches": ["https://transact.playstation.com/*"],
+          "all_frames": true,
+          "js": ["js/chrome.js"]
+        }
+    ],
     "web_accessible_resources": [ "js/psdleChromium.js", "js/psdle.gotham.js", "js/psdle.valkyrie.js" ],
     "icons": {
         "16": "icons/icon32.png",
